@@ -1,7 +1,7 @@
 <?php
 
 /**
- *	Generate XLS file
+ *	Generate SQL file
  *********************************/
 
 /* functions */
@@ -10,34 +10,35 @@ require_once( dirname(__FILE__) . '/../../../functions/functions.php' );
 # initialize user object
 $Database 	= new Database_PDO;
 $User 		= new User ($Database);
-$Sections	= new Sections ($Database);
-$Subnets	= new Subnets ($Database);
-$Addresses	= new Addresses ($Database);
-$Tools		= new Tools ($Database);
-$Result 	= new Result ();
 
 # verify that user is logged in
 $User->check_user_session();
 
-$db = Config::ValueOf('db');
+$mysqldump = Config::ValueOf('mysqldump_cli_binary', '/usr/bin/mysqldump');
 
-//set filename
-$filename = "phpipam_MySQL_dump_". date("Y-m-d") .".sql";
+if ( !file_exists($mysqldump) ) {
+    $filename = "error_message.txt";
 
-//set content
-/* $command = "mysqldump --opt -h $db['host'] -u $db['user'] -p $db['pass'] $db['name'] | gzip > $backupFile"; */
-$command      = "mysqldump --opt -h '". $db['host'] ."' -u '". $db['user'] ."' -p'". $db['pass'] ."' '". $db['name'] ."'";
-$command_safe = "mysqldump --opt -h '". $db['host'] ."' -u '". "<REDACTED>" ."' -p'". "<REDACTED>" ."' '". $db['name'] ."'";
+    $content  = _("Unable to locate executable: ").$mysqldump."\n";
+    $content .= _("Please configure \$mysqldump_cli_binary in config.php\n");
+} else {
+    $filename = "phpipam_MySQL_dump_". date("Y-m-d") .".sql";
 
-$content  = "# phpipam Database dump \n";
-$content .= "#    command executed: $command_safe \n";
-$content .= "# --------------------- \n\n";
-$content .= shell_exec($command);
+    $db = Config::ValueOf('db');
 
-/* headers */
+    $command      = "$mysqldump --opt -h '". $db['host'] ."' -u '". $db['user'] ."' -p'". $db['pass'] ."' '". $db['name'] ."'";
+    $command_safe = "$mysqldump --opt -h '". $db['host'] ."' -u '". "<REDACTED>" ."' -p'". "<REDACTED>" ."' '". $db['name'] ."'";
+
+    $content  = "# phpipam Database dump \n";
+    $content .= "#    command executed: $command_safe \n";
+    $content .= "# --------------------- \n\n";
+    $content .= shell_exec($command);
+}
+
 header("Cache-Control: private");
 header("Content-Description: File Transfer");
-header('Content-type: application/octet-stream');
+header("Content-Type: application/octet-stream");
 header('Content-Disposition: attachment; filename="'. $filename .'"');
+header("Content-Length: " . strlen($content));
 
 print($content);
